# hands-on-llms

modules/financial_bot/: Makefile  pyproject.toml  requirements.txt
modules/financial_bot/financial_bot/: chains.py
modules/financial_bot/tools/: bot.py  ui_api.py
modules/q_and_a_dataset_generator/: pyproject.toml
modules/streaming_pipeline/: pyproject.toml
modules/streaming_pipeline/deploy/: Dockerfile
modules/streaming_pipeline/streaming_pipeline/: alpaca_batch.py  alpaca_stream.py  qdrant.py
